# ME433

HW10/: CMakeLists.txt  HW10.c  HW10_game.py  README.md  pico_sdk_import.cmake  video_script.md
HW11/: HW11_pico_bridge1.c  main1.c
HW12/: main.c
HW13/: README.md
HW14/: CMakeLists (1).txt  HW14.c  HW14.py
HW15/: CANVAS_SUBMISSION_NOTE.txt  README.md  as5600_mount.scad  design_notes.md  haptic_paddle_first_draft.scad  load_cell_adapter.scad  paddle_arm.scad  servo_base_plate.scad  thimble_clamp.scad
HW16/: README_HW16.md  hw16_current_plot.py
HW18/: CMakeLists_副本.txt  README_副本.md  haptic_graphics_副本.py  main_副本.c
HW2/: CMakeLists.txt  README.md  code.py
HW2/HW2/: HW2.c
HW3/: CMakeLists.txt  HW3_mcp23008_button_led.c
HW4/: CMakeLists.txt  README.md
HW5/: README.md
HW6/: imu_bridge.c  mouse_modes_main.c
HW7/: CMakeLists (3).txt  HW7_main (1).c
HW8/: CMakeLists.txt  README.md  wave_memory_dac.c
HW9/: deliverables_list.txt  hw9_brief_notes.txt  hw9_dsp.py  sample_rates.txt  sigA.csv  sigB.csv
